@@ -1,8 +1,13 @@
 ===v8.4.1===
 * Compatibility updates for patch 7.3.0.
+* The Guardian icon type (Warlock) now has sort settings.
 * Added Light's Hammer tracking to the totem/Consecration icon type.
 * Added Soul Shard fragment tracking to conditions & Resource Display icons.
 * Increased Astral Power condition cap to 130.
+* Added newer drums to the BurstHaste equivalency.
+
+====Bug Fixes====
+* Fixed dropdown scaling issues.
 
 ===v8.4.0===
 * Compatibility updates for patch 7.2.5.
